# axiom-station-final

./: .gitignore  README.md  example_prompts  migrate_repo.sh  package-lock.json
.claude/: settings.local.json
.github/workflows/: deploy-factory.yml  format-check.yml
axiom_factory/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
axiom_factory/factory/: agent_one.py  builder.py  runner.py  trace_stream.py
firebase/: .firebaserc  firestore.rules
frontend/: Prompt.md  README.md  bun.lockb  env_example  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  manifest.json  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/gemini/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/: ConfirmationDialog.tsx  Footer.tsx  ProviderIcons.tsx  VoiceChat.tsx  ai-input-section.tsx  animated-coral.tsx  canvas.tsx  cta-section.tsx  documentation-section.tsx  faq-section.tsx  landing-hero.tsx  navigation.tsx  social-proof-section.tsx  theme-toggle.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: use-auto-resize-textarea.ts  useSaveWorkflow.ts
frontend/src/lib/: firebase-admin.ts  firebase.ts  system-prompt.ts  tools-config.ts  tools-prompt-generator.ts  tools-providers.ts  tools-utils.ts  utils.ts  workflow-parser.ts
frontend/src/types/: chat.ts  jsx.d.ts  tools.ts  traces.ts  ui.ts  workflow.ts
(+31 files in other folders)
